# AI-Account-Toolkit

./: .gitmodules  CHANGELOG.md  README.md
.github/workflows/: submodule-health-check.yml
TrezaReg/trezaRegAnd2Api/: .gitignore  README.md  config.yaml.example  pyproject.toml
TrezaReg/trezaRegAnd2Api/src/treza_reg/: __init__.py  __main__.py  account_manager.py  cloudflare_email.py  config.py  generate_service.py  log.py  main.py  proxy_pool.py  register.py  register_service.py  runner.py  state.py  storage.py  web_server.py
TrezaReg/trezaRegAnd2Api/src/treza_reg/templates/: dashboard.html  generate.html  register.html
